# cc-plugins

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude/: ox-hooks.json  settings.json
.claude-plugin/: marketplace.json
.github/workflows/: ai-pr-review.yml  ai-review.yml  cancel-ai-review.yml  ci.yml
codex/plugins/ox/: hooks.json
codex/plugins/ox/.codex-plugin/: plugin.json
plugins/ox/: README.md  ox-hooks.json.example
plugins/ox-gh/: README.md
plugins/ox-gh/.claude-plugin/: plugin.json
plugins/ox-gh/commands/: issue.md  pr.md  yolo-merge.md
plugins/ox/.claude-plugin/: plugin.json
plugins/ox/codex/: hooks.json
plugins/ox/commands/: commit.md
plugins/ox/hooks/: hooks.json
plugins/ox/scripts/: ban_complex_bash.py  ban_lint_suppressions.py  ban_redundant_cd.py  run_if_changed.py
plugins/oxgh/: README.md
plugins/oxgh/.claude-plugin/: plugin.json
plugins/oxgh/commands/: issue.md  merge-or-fix.md  open-pr.md  shipit.md  triage.md  wait-for-review.md
plugins/oxgh/scripts/: wait_for_ai_review.py
plugins/oxgl/: README.md
plugins/oxgl/.claude-plugin/: plugin.json
plugins/oxgl/commands/: issue.md  merge-or-fix.md  open-mr.md  shipit.md  wait-for-review.md
plugins/oxgl/scripts/: wait_for_ai_review.py
scripts/: banner.sh  bump.py  format_json.py  generate_codex.py  install_codex_plugins.py
tests/: test_codex_templates.py  test_generate_codex.py  test_install_codex_plugins.py
tests/ox/: test_ban_complex_bash.py  test_run_if_changed.py
(+39 files in other folders)
